# nonebot_plugin_makemidi

./: .gitignore  README.md  midi2jianpu.py  pyproject.toml  requirements.txt
fluidsynth/include/fluidsynth/: version.h
fluidsynth/lib/pkgconfig/: fluidsynth.pc
nonebot_plugin_makemidi/: __init__.py  data_source.py  utils.py
