[tool.poetry]
name = "nonebot_plugin_makemidi"
version = "0.2.1"
description = "Easy midi maker"
authors = ["RandomEnch <randomench@foxmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true 

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc3"
nonebot-adapter-onebot = "^2.2.1"
midiutil = "^1.2.1"
midi2audio = "^0.1.1"
fluidsynth = "^0.2"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
